# PixelShot

./: Cargo.toml  README.md
src/: copy_to_clipboard.rs  draw_line.rs  help.txt  image_updating.rs  main.rs  ui_interactions.rs
