[package]
name = "pixelshot"
# am horrible at naming things
version = "0.5.1"
edition = "2024"

[dependencies]
ashpd = "0.11.0"
embedded-graphics = "0.8.1"
gdk4 = "0.9.6"
gtk4 = { version = "0.9.6", features = ["v4_6", "v4_8"] }
image = "0.25.6"
mimalloc = "0.1.47"
tokio = { version = "1.45.1", features = ["macros", "rt"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 4
